# dynamic-tc-lnn

./: .gitignore  README.md
liquid_neural_network/: Cargo.toml  market_data.json  meta_model.json  model_a.json  model_b.json  model_c.json
liquid_neural_network/frontend/: index.html  package-lock.json  package.json
liquid_neural_network/src/: main.rs  main2.rs  server.rs  ws.rs
liquid_neural_network/src/api/: handlers.rs  mod.rs
liquid_neural_network/src/models/: mod.rs  network.rs
liquid_neural_network/src/utils/: data_processing.rs  mod.rs
