[package]
name = "liquid_neural_network"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
plotters = { version = "0.3.7", default-features = false, features = ["svg_backend", "line_series"] }