[package]
name = "liquid_neural_network"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-files = "0.6"
actix-web-actors = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
plotters = "0.3.7"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
chrono = { version = "0.4.38", features = ["serde"] }